<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <ScrollView
        android:id="@+id/scrollView"
        android:layout_width="match_parent"
        android:layout_height="match_parent" >

        <LinearLayout
            android:id="@+id/linearLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <ImageView
                android:id="@+id/imageForecast"
                android:layout_width="match_parent"
                android:layout_height="350dp" />

            <TextView
                android:id="@+id/textViewLocation"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="15dp"
                android:gravity="center"
                android:text="@string/pendingWebCall"
                android:textColor="@android:color/black"
                android:textSize="27sp" />

            <TextView
                android:id="@+id/labelTemp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="left"
                android:padding="3dp"
                android:text="@string/labelTemp"
                android:textColor="@android:color/black"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/textViewTemp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="right"
                android:padding="3dp"
                android:text="@string/pendingWebCall"
                android:textColor="@android:color/black"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/labelFeelsLikeTemp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="left"
                android:padding="3dp"
                android:text="@string/labelFeelsLikeTemp"
                android:textColor="@android:color/black"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/textViewFeelsLikeTemp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="right"
                android:padding="3dp"
                android:text="@string/pendingWebCall"
                android:textColor="@android:color/black"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/labelHumidity"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="left"
                android:padding="3dp"
                android:text="@string/labelHumidity"
                android:textColor="@android:color/black"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/textViewHumidity"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="right"
                android:padding="3dp"
                android:text="@string/pendingWebCall"
                android:textColor="@android:color/black"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/labelChanceOfPrecip"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="left"
                android:padding="3dp"
                android:text="@string/labelChanceOfPrecip"
                android:textColor="@android:color/black"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/textViewChanceOfPrecip"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="right"
                android:padding="3dp"
                android:text="@string/pendingWebCall"
                android:textColor="@android:color/black"
                android:textSize="20sp" />
            
            <TextView
                android:id="@+id/labelAsOfTime"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="left"
                android:padding="3dp"
                android:text="@string/labelAsOfTime"
                android:textColor="@android:color/black"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/textViewAsOfTime"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="right"
                android:padding="3dp"
                android:text="@string/pendingWebCall"
                android:textColor="@android:color/black"
                android:textSize="20sp"
                android:textStyle="bold" />
            
        </LinearLayout>
    </ScrollView>

    <RelativeLayout
        android:id="@+id/layoutProgress"
        android:layout_width="match_parent"
        android:layout_height="match_parent" >

        <ProgressBar
            android:id="@+id/progressBar"
            style="?android:attr/progressBarStyleLarge"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true" />

        <TextView
            android:id="@+id/textViewProgressBar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/progressBar"
            android:layout_centerHorizontal="true"
            android:padding="5dp"
            android:text="@string/progressMessage"
            android:textSize="20sp" />
    </RelativeLayout>

</FrameLayout>
